feat: add deck's handlers
